# Gesundheitstimer-Website

./: .gitignore  README.md  pyproject.toml
gesundheitstimer/: __main__.py  database.py  log.py  main.py
gesundheitstimer/static/: styles.css
gesundheitstimer/static/css/: styles.css
gesundheitstimer/templates/: Base.html  base.html  index.html  setting.html  settings.html
